samples/_failures_safe/1761435246_41b5bd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d95b604c.c: In function ‘main’:
./samples/SAFE/__tmp_d95b604c.c:145:16: error: missing terminating " character
  145 |         printf("4. Transpose
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d95b604c.c:145:9: error: expected expression at end of input
  145 |         printf("4. Transpose
      |         ^~~~~~
./samples/SAFE/__tmp_d95b604c.c:145:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d95b604c.c:145:9: error: expected declaration or statement at end of input
